EPMRPP-90249 roles and permissions refactoring